plugins {
	id 'org.springframework.boot' version '2.2.2.RELEASE'
	id 'io.spring.dependency-management' version '1.0.8.RELEASE'
	id 'java'
}

apply plugin: 'application'


group = 'oss.pilot'
version = '1.0.1'
sourceCompatibility = '1.8'

configurations {
	developmentOnly
	runtimeClasspath {
		extendsFrom developmentOnly
	}
}

repositories {
	mavenCentral()
}

bootRun {
  // jvmArgs = ["-agentlib:jdwp=transport=dt_socket,server=y,suspend=y,address=5005" ]
   //jvmArgs = ["-javaagent:D:/Project/WAS/scouter/agent.java/scouter.agent.jar -Dscouter.config=D:/Project/WAS/scouter/scouter.conf" ]

jvmArgs = [
//  "-javaagent:D:/Project/WAS/spring-instrument-5.2.3.RELEASE.jar",
  "-Dorg.aspectj.tracing.enabled=true",
  "-Daj.weaving.verbose=false",
  "-Dorg.aspectj.weaver.showWeaveInfo=false",
  "-DcontainerNamespace=atp2sxg",
  "-Dspring.profiles.active=local",
  "-Dscouter.config=D:/Project/WAS/scouter.conf",
  "-javaagent:D:/Project/WAS/scouter/agent.java/scouter.agent.jar"
]

//jvmArgs +="-javaagent:D:/Project/WAS/scouter/agent.java/scouter.agent.jar"

}

//, "-javaagent:D:/Project/WAS/scouter/agent.java/scouter.agent.jar -Dscouter.config=D:/Project/WAS/scouter/scouter.conf"

def jdkVersion = 1.8
sourceCompatibility = jdkVersion
targetCompatibility = jdkVersion


def defaultEncoding = 'UTF-8'
[compileJava, compileTestJava]*.options*.encoding = defaultEncoding


applicationName = "thread"
applicationDefaultJvmArgs = ["-Djava.net.preferIPv4Stack=true", "-Xms2g", "-Xmx4g"]

applicationDefaultJvmArgs += "-Dfile.encoding=UTF-8"
applicationDefaultJvmArgs += "-server"

//applicationDefaultJvmArgs += "-javaagent:D:/Project/WAS/spring-instrument-5.2.3.RELEASE.jar"

//applicationDefaultJvmArgs += "-javaagent:D:/Project/WAS/scouter/agent.java/scouter.agent.jar -Dscouter.config=D:/Project/WAS/scouter.conf"

//applicationDefaultJvmArgs += "-Dscouter.config=D:/Project/WAS/scouter/scouter.conf"

//applicationDefaultJvmArgs += "-Ddb=DB"
//applicationDefaultJvmArgs += "-Dlog.dir=D:/logs"
applicationDefaultJvmArgs += "-Xss1m"

//applicationDefaultJvmArgs += "-XX:PermSize=512m"
//applicationDefaultJvmArgs += "-XX:MaxPermSize=1024m"

applicationDefaultJvmArgs += "-XX:MetaspaceSize=2g"
applicationDefaultJvmArgs += "-XX:MaxMetaspaceSize=2g"

//applicationDefaultJvmArgs += "-verbose:class"
//applicationDefaultJvmArgs += "-Xms1g"
//applicationDefaultJvmArgs += "-Xmx2g"
//applicationDefaultJvmArgs += "-Djava.awt.headless=true"
//applicationDefaultJvmArgs += "-Djava.net.preferIPv4Stack=true"

//applicationDefaultJvmArgs += "-agentlib:jdwp=transport=dt_socket,server=y,suspend=n,address=5005"

dependencies {
    implementation('org.springframework.boot:spring-boot-starter-actuator')
    implementation('org.springframework.boot:spring-boot-starter-data-jpa')
    implementation('org.springframework.boot:spring-boot-starter-web')
    
    
    
    
	compile group: 'org.springframework', name: 'spring-instrument', version: '5.2.3.RELEASE'
    
    
    //testCompile group: 'org.springframework.security', name: 'spring-security-test', version: '5.1.4.RELEASE'
    
    
    compile("org.springframework.boot:spring-boot-starter-security")
    testImplementation('org.springframework.boot:spring-boot-starter-test')
    
    
    compile("org.springframework.boot:spring-boot-starter-thymeleaf")
    
    
// spring-boot 
    runtime('org.springframework.boot:spring-boot-devtools')
    compile "org.springframework.boot:spring-boot-starter-actuator"
    compile "org.springframework.boot:spring-boot-loader-tools"
    compile "org.springframework.boot:spring-boot-configuration-processor"
	

    compile('org.springframework.boot:spring-boot-starter-data-rest')
	compile('org.springframework.boot:spring-boot-starter-web-services')
    compile("org.springframework.boot:spring-boot-starter-data-jpa")
    compile "org.springframework.boot:spring-boot-starter-mail"
	compile "org.springframework.boot:spring-boot-starter-logging"
    compile "org.springframework.boot:spring-boot-starter-aop"
    compile "org.springframework.boot:spring-boot-starter-cache"
    compile("org.springframework.boot:spring-boot-starter-jdbc")
    
	compile('org.mybatis.spring.boot:mybatis-spring-boot-starter:1.3.2')
	compile("org.mybatis:mybatis-spring")
	compile("org.mybatis:mybatis")
	
//
     
    compile("com.fasterxml.jackson.core:jackson-core")
	compile("com.fasterxml.jackson.core:jackson-databind")
	compile("com.fasterxml.jackson.core:jackson-annotations")
	compile('com.fasterxml.jackson.dataformat:jackson-dataformat-xml:2.9.8')
	
	compile 'com.google.guava:guava:22.0'
	compile 'com.google.code.gson:gson:2.8.0'



    compile("com.github.derjust:spring-data-dynamodb:5.0.3")
    compile("com.amazonaws:aws-java-sdk-dynamodb:1.11.429")
    
    
	
	compileOnly 'org.projectlombok:lombok:1.18.6'
	annotationProcessor 'org.projectlombok:lombok:1.18.6'
	
	//compile('ch.qos.logback:logback-core:1.2.+')
	//compile('ch.qos.logback:logback-classic:1.2.+')
	
	compile 'org.slf4j:slf4j-api:1.7.26'
	compile 'commons-codec:commons-codec:1.12'
	compile 'org.apache.commons:commons-math3:3.6.1'
	compile("org.apache.commons:commons-text:1.6")
	
	compile('org.springframework.boot:spring-boot-starter-aop') 
	compile group: 'com.googlecode.json-simple', name: 'json-simple', version: '1.1.1'
	     	
    compile group: 'javax.xml.bind', name: 'jaxb-api', version: '2.3.0'
    compile group: 'com.sun.xml.bind', name: 'jaxb-core', version: '2.3.0'
    compile group: 'com.sun.xml.bind', name: 'jaxb-impl', version: '2.3.0'
    compile group: 'javax.activation', name: 'activation', version: '1.1.1'
    


	//compile files('D:/topasIBE/tools/jdbc/ojdbc6.jar')
    
    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'
    
    // DB 연동
    compile group: 'org.mariadb.jdbc', name: 'mariadb-java-client', version: '2.4.3'

	compile('org.bgee.log4jdbc-log4j2:log4jdbc-log4j2-jdbc4:1.16')
	
	compile('io.jsonwebtoken:jjwt:0.9.1')    
    
}
